# foundations-of-RAG-and-agentic-systems

./: README.md  pyproject.toml
docs/: architecture.md  assumptions.md  concept_coverage.md
docs/chapters/: README.md  ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  ch15.md  ch16.md  ch17.md  ch18.md  ch19.md  ch20.md  ch21.md  ch22.md  ch23.md  ch24.md  ch25.md  ch26.md  ch27.md  ch28.md  ch29.md  ch30.md  ch31.md  ch32.md  ch33.md  ch34.md  ch35.md  ch36.md  ch37.md  ch38.md  ch39.md
examples/: users.json
examples/corpus/base/docs/: coastal_maintenance_bulletin.md  contractor_travel_faq.md  distributor_warranty_eu_2024.md  distributor_warranty_na_2024.md  helios_hmx44_rev_c.md  ir_203_saline_cracking.md  malicious_x12_note.md  ocr_torque_scan.txt  phoenix_field_office.md  phoenix_migration_project.md  (+7 more)
examples/eval/: queries.jsonl
raglab/: __init__.py  __main__.py  build.py  cli.py  config.py  demos.py  text.py
raglab/agent/: __init__.py  controller.py  memory.py  multi_agent.py  planner.py  router.py  tools.py
raglab/data/: concept_inventory.json
raglab/domain/: __init__.py  models.py
raglab/evaluation/: __init__.py  metrics.py  runner.py
raglab/generation/: __init__.py  closed_book.py  synthesizer.py  verify.py
raglab/ingest/: __init__.py  pipeline.py
raglab/ops/: __init__.py  cache.py  governance.py  publish.py  security.py  tracing.py
raglab/retrieval/: __init__.py  engine.py  indexes.py
raglab/storage/: __init__.py  json_store.py
tests/: test_integration.py
(+11 files in other folders)
